src/test/resources/tags/importtag/errors/macro-with-error.jinja
{% macro doSomething() %}
{% set test = 'test' %}









{{ test|add(1) }}
{% endmacro %}
